nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
spec:
  selector:
    matchLabels:
      app: nodered
      tier: nodered
  replicas: 1
  template:
    metadata:
      labels:
        app: nodered
        tier: nodered
    spec:
      containers:
      - name: nodered
        image: nodered/node-red:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 1880
