nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
    app: nodered
    tier: nodered
spec:
  type: NodePort
  ports:
  - port: 1880
  selector:
    app: nodered
    tier: nodered
